# base2

./: CMakeLists.txt  Icelake.md  LICENSE  README.md
.github/workflows/: ci.yml
include/: Base2.hpp
source/: Base2-arm64.hpp  Base2-x86.hpp  Base2.cpp  main.cpp
tests/: base2-enc.cpp
